# Data-Assimilation-Flow-Matching

./: .gitignore  LICENSE  README.rst  pyproject.toml  runs.sqlite  test_best.sh  test_best_classical_comparison.sh  tune.sh  tune_classical.sh
conf/: optuna_study.yaml
notebooks/: AblationSamplingTimeStepCount.ipynb  AblationTimeBetweenObs.ipynb  BenchmarkTiming.ipynb  KalmanRotation2D.ipynb  OptunaHyperparams.ipynb  classical_comparison.ipynb  dataset_NavierStokes.ipynb  datasets.ipynb  datasets_DoubleWell.ipynb  datasets_KuramotoSivashinsky.ipynb  datasets_Lorenz96.ipynb  datasets_NavierStokes.ipynb  logged_metrics.ipynb  old_hyperparameter_sensitivity.ipynb  ref_double_well.ipynb  rmse.ipynb  rmse_heatmap.ipynb  sensitivity.ipynb  test_2d_mc_velocity.ipynb  time_s.ipynb  time_step_times.ipynb  trajectories.ipynb  trajectories_DoubleWell.ipynb  trajectories_DoubleWell.py  trajectories_KuramotoSivashinsky.ipynb  trajectories_Lorenz96.ipynb  trajectories_Lorenz96Bao2024EnSF_Dim1e6.ipynb  trajectories_Lorenz96Bao2024EnSF_Dim1e6.py  trajectories_Lorenz96Bohan.ipynb  trajectories_Lorenz96Bohan.py  trajectories_Lorenz96H***.py  trajectories_Lorenz96H___.ipynb  trajectories_NavierStokes.ipynb  tune.ipynb  tune_plots.ipynb
sweeps/: benchmark.sh  benchmark_KuramotoSivashinskyAtanObs.csv  benchmark_KuramotoSivashinskyIdentityObs.csv  benchmark_NavierStokesATanObs.csv  benchmark_NavierStokesIdentityObs.csv  rerun.sh  topk_hyperparameters.csv  topk_hyperparameters_classical_comparison.csv  tune_classical.sh  tune_enkf_letkf.sh
tests/: fixtures.py  test_benchmark_filter.py  (+7 more)
(+117 files in other folders)
