[project]
name = "dafm"
version = "0.1.0"
description = "Data assimilation using flow matching."
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "Taos Transue", email = "taos.transue@utah.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "dapper==1.6.0",
    "debugpy>=1.8.12",
    "duckdb>=1.2.0",
    "einops>=0.8.0",
    "great-tables>=0.18.0",
    "hydra-core>=1.3.2",
    "hydra-orm>=0.1.1",
    "lightning>=2.5.0.post0",
    "marimo[recommended]>=0.12.9",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "pyarrow>=19.0.0",
    "pytest>=8.3.4",
    "seaborn>=0.13.2",
    "sqlalchemy==2.0.36",
    "torch>=2.4.1",
    "torchdiffeq>=0.2.5",
    "tqdm>=4.67.1",
]

[project.scripts]
dafm = "dafm:main"

[tool.uv]
index-strategy = "unsafe-best-match"
link-mode = "symlink"

[tool.uv.sources]
torch = [
    { index = "pytorch" },
]
hydra-orm = [
    { git = "https://github.com/reepoi/hydra-orm" },
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
